# hashira-hub

./: .env.sample  .pre-commit-config.yaml  README.md  pyproject.toml  update-env-sample.py
backend/: __init__.py
docs/: hashira-hub.drawio  project_scope.md
